# mindfusion-ai-backend

./: Dockerfile  Makefile  README.md  env.example  main.py  pyproject.toml  requirements.txt
bot/: config.py
bot/database/: main.py
bot/database/models/: campaign.py  cart.py  chat.py  common.py  face_swap_package.py  feedback.py  game.py  generation.py  message.py  package.py  product.py  promo_code.py  prompt.py  request.py  role.py  subscription.py  transaction.py  user.py
bot/handlers/admin/: admin_handler.py  ads_handler.py  ban_handler.py  blast_handler.py  catalog_handler.py  face_swap_handler.py  promo_code_handler.py  statistics_handler.py
bot/handlers/ai/: chat_gpt_handler.py  claude_handler.py  dalle_handler.py  deep_seek_handler.py  eightify_handler.py  face_swap_handler.py  flux_handler.py  gemini_handler.py  gemini_video_handler.py  grok_handler.py  kling_handler.py  luma_handler.py  midjourney_handler.py  model_handler.py  music_gen_handler.py  perplexity_handler.py  photoshop_ai_handler.py  pika_handler.py  recraft_handler.py  runway_handler.py  stable_diffusion_handler.py  suno_handler.py
bot/handlers/common/: catalog_handler.py  common_handler.py  document_handler.py  feedback_handler.py  info_handler.py  maintenance_handler.py  photo_handler.py  profile_handler.py  sticker_handler.py  text_handler.py  video_handler.py  voice_handler.py
bot/handlers/payment/: bonus_handler.py  payment_handler.py  promo_code_handler.py
bot/handlers/settings/: language_handler.py  settings_handler.py
bot/helpers/: calculate_percentage_difference.py  reply_with_voice.py  split_message.py
bot/helpers/billing/: check_waiting_payments.py  create_auto_payment.py  create_payment.py  resubscribe.py  unsubscribe.py  update_daily_expenses.py
bot/helpers/checkers/: check_unresolved_requests.py  check_user_last_activity.py
bot/helpers/creaters/: create_new_message_and_update_user.py  create_package.py  create_subscription.py
bot/helpers/formatters/: format_number.py
bot/helpers/getters/: get_history_without_duplicates.py  get_human_model.py  get_info_by_model.py  get_model_type.py  get_model_version.py  get_quota_by_model.py  get_switched_to_ai_model.py  get_time_until_limit_update.py  get_user_discount.py
bot/helpers/handlers/: handle_big_file.py  handle_forbidden_error.py  handle_kling_webhook.py  handle_luma_webhook.py  handle_midjourney_webhook.py  handle_model_info.py  handle_network_error.py  handle_pika_webhook.py  handle_replicate_webhook.py  handle_stripe_webhook.py  handle_suno_webhook.py  handle_yookassa_webhook.py
bot/helpers/midjourney/: __init__.py
bot/helpers/notifiers/: notify_admins_about_error.py  notify_user_about_quota.py
bot/helpers/senders/: send_ai_message.py  send_ai_model_internal_error.py  send_audio.py  send_document.py  (+10 more)
bot/integrations/: anthropic.py  deep_seek.py  eightify.py  face_swap.py  google.py  grok.py  kling.py  luma.py  midjourney.py  open_ai.py  perplexity.py  pika.py  recraft.py  replicateAI.py  replicate_ai.py  runway.py  suno.py
bot/locales/: en.py  es.py  hi.py  main.py  ru.py  texts.py  translate_text.py  types.py
bot/middlewares/: AlbumMiddleware.py  AuthMiddleware.py  LoggingMiddleware.py
bot/utils/: is_already_processing.py  is_messages_limit_exceeded.py  is_time_limit_exceeded.py  migrate.py
(+132 files in other folders)
